tests/positive/test-success-var.rooc
fun main() -> int {
    let z:int = 1;
    print_int(z);
    
    return 0;
}