tests/negative/test-fail-type1.rooc
fun main() -> int {
    var a:int = "This is not an integer";
    print_int(a);

    return 0;
}